<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="viewModel" type="com.avc.app.gpiodemo.ui.main.MainViewModel"/>
        <import type="android.view.View"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.main.MainFragment">

        <TextView
                android:id="@+id/digitalInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/digital_input"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        <Switch
                android:id="@+id/diSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/di"
                android:onClick="@{()->viewModel.clickDiSwitch()}"
                app:layout_constraintStart_toStartOf="@+id/digitalInput"
                app:layout_constraintTop_toBottomOf="@+id/digitalInput"/>

        <RadioGroup
                android:id="@+id/digitalInputNormalStatus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal"
                android:visibility="@{viewModel.isDiEnabled? View.VISIBLE:View.INVISIBLE}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/diSwitch"
                app:layout_constraintTop_toTopOf="@+id/diSwitch">

            <RadioButton
                    android:id="@+id/diNormalOpen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:checked="true"
                    android:text="@string/normal_open"/>

            <RadioButton
                    android:id="@+id/diNormalClose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/normal_close"/>

        </RadioGroup>

        <TextView
                android:id="@+id/digitalOutput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="40dp"
                android:text="@string/digital_output"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/diSwitch"/>

        <Switch
                android:id="@+id/dO1Switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/do1"
                app:layout_constraintStart_toStartOf="@+id/digitalOutput"
                app:layout_constraintTop_toBottomOf="@+id/digitalOutput"/>

        <RadioGroup
                android:id="@+id/dO1NormalStatus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/dO1Switch"
                app:layout_constraintTop_toTopOf="@+id/dO1Switch">

            <RadioButton
                    android:id="@+id/do1NormalOpen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:checked="true"
                    android:text="@string/normal_open"/>

            <RadioButton
                    android:id="@+id/do1NormalClose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/normal_close"/>
        </RadioGroup>

        <TextView
                android:id="@+id/do1PulseTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/pulse_time"
                app:layout_constraintStart_toStartOf="@+id/dO1NormalStatus"
                app:layout_constraintTop_toBottomOf="@+id/dO1NormalStatus"/>

        <SeekBar
                android:id="@+id/do1PulseTimeBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="@+id/dO1NormalStatus"
                app:layout_constraintStart_toStartOf="@+id/do1PulseTime"
                app:layout_constraintTop_toBottomOf="@+id/do1PulseTime"/>

        <TextView
                android:id="@+id/do1DelayTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/delay_time"
                app:layout_constraintStart_toStartOf="@+id/dO1NormalStatus"
                app:layout_constraintTop_toBottomOf="@+id/do1PulseTimeBar"/>

        <SeekBar
                android:id="@+id/do1DelayTimeBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="@+id/dO1NormalStatus"
                app:layout_constraintStart_toStartOf="@+id/dO1NormalStatus"
                app:layout_constraintTop_toBottomOf="@+id/do1DelayTime"/>

        <Switch
                android:id="@+id/dO2Switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/do2"
                app:layout_constraintStart_toStartOf="@+id/digitalOutput"
                app:layout_constraintTop_toBottomOf="@+id/do1DelayTimeBar"/>

        <RadioGroup
                android:id="@+id/dO2NormalStatus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/dO2Switch"
                app:layout_constraintTop_toTopOf="@+id/dO2Switch">

            <RadioButton
                    android:id="@+id/do2NormalOpen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:checked="true"
                    android:text="@string/normal_open"/>

            <RadioButton
                    android:id="@+id/do2NormalClose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/normal_close"/>
        </RadioGroup>

        <TextView
                android:id="@+id/do2PulseTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/pulse_time"
                app:layout_constraintStart_toStartOf="@+id/dO2NormalStatus"
                app:layout_constraintTop_toBottomOf="@+id/dO2NormalStatus"/>

        <SeekBar
                android:id="@+id/do2PulseTimeBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="@+id/dO2NormalStatus"
                app:layout_constraintStart_toStartOf="@+id/do2PulseTime"
                app:layout_constraintTop_toBottomOf="@+id/do2PulseTime"/>

        <TextView
                android:id="@+id/do2DelayTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/delay_time"
                app:layout_constraintStart_toStartOf="@+id/dO2NormalStatus"
                app:layout_constraintTop_toBottomOf="@+id/do2PulseTimeBar"/>

        <SeekBar
                android:id="@+id/do2DelayTimeBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="@+id/dO2NormalStatus"
                app:layout_constraintStart_toStartOf="@+id/dO2NormalStatus"
                app:layout_constraintTop_toBottomOf="@+id/do2DelayTime"/>

        <Button
                android:id="@+id/trigger"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:textColor="@color/colorWhite"
                android:background="@color/colorPrimary"
                android:text="@string/trigger"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
